--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.5"
+    "mysql2": "^3.9.5",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
